<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etNumber1"
        android:hint="@string/number_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <EditText
        android:id="@+id/etNumber2"
        android:hint="@string/number_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAddition"
        android:text="@string/add"
        android:onClick="doCalculations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSubtraction"
        android:text="@string/subtract"
        android:onClick="doCalculations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnMultiplication"
        android:text="@string/multiply"
        android:onClick="doCalculations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDivide"
        android:text="@string/divide"
        android:onClick="doCalculations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblResult"
        android:text="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvResult"
        android:text="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnToSecond"
        android:onClick="goToSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_second"/>

</LinearLayout>